<resources>
    <string name="app_name">Calendar</string>

    //Day's short keyword
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="sunday">S</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="reminder">Reminder</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="set_reminder">Set Reminder</string>

</resources>