<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_corner"
    android:padding="20dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/textcolor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/timeGet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:paddingBottom="5dp"
                android:text="@string/time"
                android:textColor="@color/textcolor" />
            <TextView
                android:id="@+id/tv_settime"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/round_corner"
                android:ems="6"
                android:fontFamily="@font/inter_semibold"
                android:padding="5dp"
                android:drawableTint="@color/textcolor"
                android:textSize="15sp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingHorizontal="10dp"
                android:textColor="@color/textcolor"
                app:drawableRightCompat="@drawable/timebox_icon" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:paddingBottom="5dp"
                android:text="@string/date"
                android:textColor="@color/textcolor" />
            <TextView
                android:id="@+id/tv_setdate"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:ems="15"
                android:background="@drawable/round_corner"
                android:fontFamily="@font/inter_semibold"
                android:padding="5dp"
                android:textSize="15sp"
                android:drawableTint="@color/textcolor"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingHorizontal="10dp"
                android:clickable="true"
                android:textColor="@color/textcolor"
                app:drawableRightCompat="@drawable/calendarbox_icon"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ib_messege"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textcolor"
        android:gravity="top"
        android:padding="7dp"
        android:inputType="textMultiLine"
        android:background="@drawable/round_corner"
        android:lines="5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="2">
        <Button
            android:id="@+id/btnset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/convertbutton_radius"
            android:textColor="@color/white"
            android:text="@string/set_reminder"
            android:fontFamily="@font/inter_regular"
            android:textAllCaps="false"
            android:textSize="16sp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btncancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/inter_regular"
            android:textColor="@color/white"
            android:background="@drawable/convertbutton_radius"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="16sp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>